Fix misc py3 compatability issues
Fix range, dictionary iteration, filters and any other non cross
compatible issues. Also update travis dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -102,6 +102,8 @@ install:
   - "[ $IS_LATEST = false ] || pip install pep8==1.5.7"
   # Install lz4 for log compression utest
   - pip install lz4
+  # Install python-future for py2/3 compatability
+  - pip install future
 
 # Tests running commands
 script:
