--- a/www/data_module/bower.json
+++ b/www/data_module/bower.json
@@ -4,7 +4,9 @@
   "description": "Buildbot AngularJS bbData module",
   "main": "dist/buildbot-data.js",
   "dependencies": {
-    "angular": "~1.4.1"
+    "angular": "~1.4.1",
+    "tabex": "~1.0.3",
+    "dexie": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1"
